# add-swap-space

./: README.md  __main__.py  add_swap_space.py  poetry.toml  pyproject.toml
src/add_swap_space/: __main__.py
src/add_swap_space.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: add_swap_space-1.0.0-py3-none-any.whl  add_swap_space-7.0.0-py3-none-any.whl
