[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "add_swap_space"
version = "1.1.0"
description = "A Python package to add swap space to a Linux system"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["swap", "add swap", "swap space", "linux swap", "swap memory"]
authors = [
  { name="rb ashish", email="dev@rbashish.tech" },
]

classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: System :: Installation/Setup",
]

dependencies = [
  "python>=3.6",
  "click>=8.1.3",
]


[project.scripts]
add-swap-space = "add_swap_space:main"

[tool.poetry.packages]
add-swap-space = { include = ["add_swap_space"] }

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-scheme = "post-semver"
vcs-commits = true

license = "MIT"

[project.urls]
"Homepage" = "https://rbashish.tech"
"Repository" = "https://github.com/rbashish/add-swap-space"
"Bug Tracker" = "https://github.com/rbashish/add-swap-space/issues"
"Changelog" = "https://github.com/rbashish/add-swap-space/blob/main/CHANGELOG.md"